# chocs-api-example

./: .gitignore  README.md  main.py  openapi.yml  pyproject.toml  requirements.txt
chinook/: __init__.py  json_response.py  middleware.py  utils.py
chinook/api/: __init__.py  albums.py  artists.py  genres.py
chinook/data/: chinook.db  schema.sql
chinook/entities/: __init__.py  album.py  artist.py  genre.py
chinook/repositories/: __init__.py  abstract_repository.py  album_repository.py  albums_repository.py  artist_repository.py  genre_repository.py
chocspetstore/: app.py  db.py  entities.py
chocspetstore/repositories/: abstract_repository.py  category_repostiory.py  photos_repository.py
petstore/: __init__.py  api.py  app.py  db.py  entities.py  json_response.py  middleware.py
petstore/data/: schema.sql
petstore/entities/: __init__.py  category.py  pet.py  pet_status.py
petstore/repositories/: __init__.py  abstract_repository.py  category_repository.py  pet_repository.py
tests/: conftest.py  test_db.py  test_json_response.py  test_utils.py  utils.py
tests/endpoints/artists/: test_get.py  test_post.py
tests/endpoints/pets/: post.py
tests/fixtures/: chinook.db
